--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,12 @@
 <h1>Webcomicname Shuffler</h1>
 
-<p><a href="http://webcomicname.com/">Webcomicname</a> is the genius work of Alex Norris. And it's usually just as funny if you randomize the middle pane.</p>
+<p><a href="http://webcomicname.com/">Webcomicname</a> is the genius work of Alex Norris. And it's usually just as funny if you randomize the middle pane. Refresh for a new one.</p>
 
 {{#with (random-choice model) as |first|}}
 {{#with (random-choice model) as |second|}}
 
+<div class="comic-area">
+{{#squishable-container width=1245 unit="px"}}
   <div class="shuffler">
     <div class="mask one">
       <img src={{first.url}} >
@@ -18,6 +20,8 @@
       <img src={{first.url}} >
     </div>
   </div>
+{{/squishable-container}}
+</div>
 
 {{/with}}
 {{/with}}
