ok maybe just sometimes

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <h1>Webcomicname Shuffler</h1>
 
-<p><a href="http://webcomicname.com/">Webcomicname</a> is the genius work of Alex Norris. And it's usually just as funny if you randomize the middle pane. Refresh for a new one.</p>
+<p><a href="http://webcomicname.com/">Webcomicname</a> is the genius work of Alex Norris. And it's sometimes just as funny if you randomize the middle pane. Refresh for a new one.</p>
 
 {{#with (random-choice model) as |first|}}
 {{#with (random-choice model) as |second|}}
